fix portfolio button overflow

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -40,7 +40,7 @@
 
 .header-logo:focus-visible {
   outline: 0;
-  box-shadow:none;
+  box-shadow: none;
   opacity: .6;
 }
 
@@ -196,7 +196,7 @@
   background: var(--white1);
 }
 
-@media screen and (max-width: 640px){
+@media screen and (max-width: 640px) {
   .nav-multi--caret {
     display: none;
   }
@@ -208,36 +208,18 @@
   }
 }
 
-/* @media screen and (max-width: 640px) {
-  .header-logo img {
-    height: 1.375rem;
-    width: 1.375rem;
-  }
-
-  .nav-menu li {
-    padding: .375rem .375rem;
-  }
-
-  .nav-menu li a {
-    padding: 0 .75rem;
-  }
-
-  .nav-multi--caret {
-    display: none;
-  }
-
-  .nav-menu li:last-child a {
-    width: 100%;
-    justify-content: center;
-    padding-right: .75rem;
-  }
-} */
-
 @media screen and (max-width: 490px) {
-  .header-logo {
-    display: none;
-  }
   .nav-menu li a {
     font-size: .875rem;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .header-wrapper {
+    padding: 0;
+  }
+
+  .header-logo {
+    display: none;
   }
 }
